# akatsuki

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  web-run.sh
.github/workflows/: ci.yml
src/: main.cpp
test/: test_driver.cpp
test/suites/: bogus_suite.hpp
